<resources>
    <string name="app_name">TraveGuide</string>
    <string name="search">search</string>
    <string name="informasi">Informasi</string>
    <string name="kebudayaan">Kebudayaan</string>
    <string name="anggaran">Anggaran</string>
    <string name="perkiraan">Perkiraan Pengeluaran</string>
    <string name="location">Location</string>
    <string name="rating">Rating</string>
    <string name="add_wishlist">+ Add to Wishlist</string>
    <string name="info_wisata">Informasi Objek Wisata</string>
    <string name="allreview">All Reviews</string>
    <string name="title_activity_maps">Map</string>
    <string name="viewmap">View Map</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>

</resources>
