<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="skeletonteam.traveguide.MapsActivity" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/arrowback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.1"
                    android:background="?attr/colorPrimary"
                    android:src="@drawable/arrowback" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:layout_weight="3"
                    android:text="Nama Objeck Wisata"
                    android:textSize="20dp" />
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.constraint.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/gps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:src="@drawable/mylocation"
            android:text="Where am i ?" />

        <Button
            android:id="@+id/gmap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:src="@drawable/mylocation"
            android:text="go to google map" />
    </LinearLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" >

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:id="@+id/radioGroup"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/normal"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mylocation"
                android:text="@string/normal"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:gravity="center"
                />
            <RadioButton
                android:id="@+id/satellite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mylocation"
                android:text="@string/satellite"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:gravity="center"
                />
            <RadioButton
                android:id="@+id/terrain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mylocation"
                android:text="@string/terrain"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:gravity="center"/>
            <RadioButton
                android:id="@+id/hybrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mylocation"
                android:text="@string/hybrid"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:gravity="center"/>
        </RadioGroup>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>

